--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@ body *{
 }
 
 nav{
-  background-color: lightgrey;
+  background-color: rgb(0, 0, 0);
+  padding: 15px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  /* filter: blur(8px); */
 }
 
 .authField{
@@ -24,6 +29,39 @@ nav{
   margin: 0.5rem;
 }
 
+.header {
+  background-image: url("/images/headerBackground.jpg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 650px;
+  position: relative;
+  padding-top: 50px;
+  color: white;
+}
+
+.header h1 {
+  size: 6rem;
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #bc13fe,
+    0 0 82px #bc13fe,
+    0 0 92px #bc13fe,
+    0 0 102px #bc13fe,
+    0 0 151px #bc13fe;
+}
+
+.container {
+  min-height: 100vh;
+  font-style: sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 @keyframes logo-spin {
   from {
