--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,100;1,300&display=swap');
+
+
 #root {
   max-width: 1280px;
   margin: 0;
   padding: 0;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: black;
 }
 body{
   margin: 0;
 }
 body *{
   padding: 0.5rem 1rem;
+  font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 500;
 }
 
 nav{
-  background-color: rgb(0, 0, 0);
-  padding: 15px;
-  margin: 0 auto;
+  /* background-color: #202020; */
+  background-color: #fbeb7c;
+  height: 2rem;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  /* filter: blur(8px); */
+  color: black;
+  font-weight: 200;
+}
+
+.navBar > div{
+  margin: 0;
+  padding: 0
+}
+
+.navBar a {
+  font-weight: 500;
+  color: black;
+  text-decoration: none;
+  font-size: 0.9rem;
 }
 
 .authField{
@@ -29,30 +48,59 @@ nav{
   margin: 0.5rem;
 }
 
-.header {
-  background-image: url("/images/headerBackground.jpg");
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 650px;
-  position: relative;
-  padding-top: 50px;
-  color: white;
-}
-
 .header h1 {
+  font-family: Montserrat;
+  font-weight: 300;
   size: 6rem;
   color: #fff;
   text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px #bc13fe,
-    0 0 82px #bc13fe,
-    0 0 92px #bc13fe,
-    0 0 102px #bc13fe,
-    0 0 151px #bc13fe;
+    0 0 5px #fff,
+    0 0 8px #fff,
+    0 0 12px #fff,
+    0 0 1px #e2e60c,
+    0 0 30px #e2e60c,
+    0 0 1px #e2e60c,
+    0 0 1px #e2e60c,
+    0 0 100px #e2e60c;
 }
+
+.header p{
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.header {
+  background-image: url("/images/header2bg.jpg");
+  background-size: cover;
+  color: white;
+}
+
+.allLink{
+  background-size: cover;
+  height: 12rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.allLink > a{
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 2rem;
+  text-decoration: none;
+  color: black;
+  font-weight: 800;
+  border-radius: 2rem;
+}
+
+.allskills{
+  background-image: url('../public/images/b&w skillsjpg.jpg');
+}
+
+.allevents{
+  background-image: url('../public/images/b&w events.jpg');
+}
+
+
 
 .container {
   min-height: 100vh;
