--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 
 #root {
-  max-width: 1280px;
+  max-width: vw;
   margin: 0;
   padding: 0;
   color: black;
@@ -107,37 +107,77 @@ nav{
 .dropDownMenu select{
   width: calc(70% - 2rem);
   border: 1px solid grey;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .dropDownMenu option {
-  font-size: 0.7rem;
+  font-size: 0.9rem;
 }
 
 .grid {
   margin-top: 1rem;
-  margin-bottom: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(40vw, 1fr));
-  gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  gap: 2px;
+  padding: 0;
 }
 
 .container {
+  position: relative;
   background-color: lightgray;
   margin: 0;
-  padding: 0 0.8rem;
-  text-align: center;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 7rem;
 }
 
-.container p {
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 5px;
+.container img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  object-fit: cover;
+}
+
+.container p, .container h2 {
+  position: relative;
+  padding: 0 ;
   border-radius: 5px;
   color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin: 0.3rem;
 }
 
 .container a{
+  position: relative;
+  z-index: 1;
   text-decoration: none;
+}
+
+.endLink{
+  background-color: #fbeb7c;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.endLink a{
+  color: black;
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 1rem;
+  font-weight: 700;
 }
 
 
