--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,87 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,100;1,300&display=swap');
-
-
-#root {
-  max-width: 1280px;
-  margin: 0;
-  padding: 0;
-  color: black;
-}
-body{
-  margin: 0;
-}
-body *{
-  padding: 0.5rem 1rem;
-  font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 500;
-}
-
-/* .pageForms {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    } */
-
-
-/* .pageForms input {
-    border:none;
-	padding:15px 20px;
-	border-radius:25px;
-	background:rgba(255,255,255,.1);
-} */
 
 .authForms {
+    margin: 0;
+    padding: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     font-size: 1rem;
-    /* background-image: url(/public/images/webb.jpeg); */
-    width:100vw;
-    height: 100vh;
+    height: calc(100vh - 4rem);
+}
+
+.authField {
+    margin: 0;
+    padding: 0;
 }
 
 
 .authForms label {
-    top: -5px;
     letter-spacing: 5px;
-    font-size: 20px;
     color: rgb(14, 14, 13);
-    
+    font-weight: 500;
 }
 
 .authForms input {
-    /* border:none; */
-	padding:15px 20px;
     background-color: rgba(240, 240, 240, 0.26);
     border: 1px solid #dfdfdf;
     border-radius: 16px;
-    width:100%;
-	/* color:#fff; 
-	display:block; */
+    width: calc(100% - 5rem);
+    margin: 1rem;
+    padding: 1rem;
 }
 
-.authForms button {
-    border:wheat;
-	padding: 20px 30px;
-    margin-top: 30px;
-	border-radius:25px;
-    color: rgb(223, 230, 236);
-    size: 20px;
-	background:rgba(4, 3, 4, 0.9);
-}
 
-/* .square {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 30%;
-    width: 40%;
-    background-color: #555;
-} */
+
 .pageForms {
     display: flex;
     flex-direction: column;
@@ -91,7 +41,6 @@ body *{
 
 .pageForms button {
     border:wheat;
-	padding:15px 20px;
     border: 1px solid #dfdfdf;
 	border-radius:25px;
     color: rgb(223, 230, 236);
@@ -107,6 +56,5 @@ body *{
     border-radius: 16px;
     box-sizing: border-box;
     /* display: flex; */
-    font-size: 1rem;
     /* justify-content: center; */
 }
