--- a/src/App.css
+++ b/src/App.css
@@ -155,16 +155,15 @@ nav{
   position: relative;
   padding: 0 ;
   border-radius: 1rem;
-  color: black;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 600;
   margin: 0.3rem;
-  background-color: rgba(255, 255, 255, 0.7);
   padding: 0.5rem;
 }
 
@@ -230,23 +229,6 @@ nav{
   margin: 0 -1rem;
   padding: 0;
 }
-
-
-
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
 
 .grid {
   margin-top: 1rem;
