--- a/src/App.css
+++ b/src/App.css
@@ -155,15 +155,16 @@ nav{
   position: relative;
   padding: 0 ;
   border-radius: 1rem;
-  color: white;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 600;
   margin: 0.3rem;
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 0.5rem;
 }
 
