--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,100;1,300&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,100;1,300&display=swap");
 
 #root {
   max-width: 1280px;
@@ -7,12 +6,13 @@
   padding: 0;
   color: black;
 }
-body{
+body {
   margin: 0;
 }
-body *{
+body * {
   padding: 0.5rem 1rem;
-  font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   font-weight: 500;
 }
 
@@ -24,7 +24,6 @@ body *{
     font-size: 1rem;
     } */
 
-
 /* .pageForms input {
     border:none;
 	padding:15px 20px;
@@ -33,46 +32,47 @@ body *{
 } */
 
 .authForms {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    /* background-image: url(/public/images/webb.jpeg); */
-    width:100vw;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  /* background-image: url(/public/images/webb.jpeg); */
+  width: 100vw;
+  height: 100vh;
 }
 
-
 .authForms label {
-    top: -5px;
-    letter-spacing: 5px;
-    font-size: 20px;
-    color: rgb(14, 14, 13);
-    
+  top: -5px;
+  letter-spacing: 5px;
+  font-size: 20px;
+  color: rgb(14, 14, 13);
 }
 
 .authForms input {
-    /* border:none; */
-	padding:15px 20px;
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #dfdfdf;
-    border-radius: 16px;
-    width:100%;
-	/* color:#fff; 
+  /* border:none; */
+  padding: 15px 20px;
+  background-color: rgba(240, 240, 240, 0.26);
+  border: 1px solid #dfdfdf;
+  border-radius: 16px;
+  width: 100%;
+  /* color:#fff; 
 	display:block; */
 }
 
 .authForms button {
-    border:wheat;
-	padding: 20px 30px;
-    margin-top: 30px;
-	border-radius:25px;
-    color: rgb(223, 230, 236);
-    size: 20px;
-	background:rgba(4, 3, 4, 0.9);
+  border: wheat;
+  padding: 20px 30px;
+  margin-top: 30px;
+  border-radius: 25px;
+  color: rgb(223, 230, 236);
+  size: 20px;
+  background: rgba(4, 3, 4, 0.9);
 }
 
+.hamburger {
+  display: none;
+}
 /* .square {
     display: flex;
     flex-direction: column;
@@ -83,30 +83,55 @@ body *{
     background-color: #555;
 } */
 .pageForms {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .pageForms button {
-    border:wheat;
-	padding:15px 20px;
-    border: 1px solid #dfdfdf;
-	border-radius:25px;
-    color: rgb(223, 230, 236);
-    size: 0.5rem;
-	background:rgba(4, 3, 4, 0.9);
+  border: wheat;
+  padding: 15px 20px;
+  border: 1px solid #dfdfdf;
+  border-radius: 25px;
+  color: rgb(223, 230, 236);
+  size: 0.5rem;
+  background: rgba(4, 3, 4, 0.9);
 }
 
 .pageForms input {
-    margin: 0.5rem 0;
-    /* align-items: center; */
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #dfdfdf;
-    border-radius: 16px;
-    box-sizing: border-box;
-    /* display: flex; */
-    font-size: 1rem;
-    /* justify-content: center; */
+  margin: 0.5rem 0;
+  background-color: rgba(240, 240, 240, 0.26);
+  border: 1px solid #dfdfdf;
+  border-radius: 16px;
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+.dropDown {
+  position: relative;
+}
+
+@media (max-width: 768px) {
+  .menu-container.closed {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+   margin-right: -1rem;
+    background: rgba(0, 0, 0, 0.9);
+    height: 2rem;
+  }
+
+  .menu-container.opened .nav-menus {
+    position: absolute;
+    right: 0;
+    top: 3rem;
+    padding: 1rem;
+    gap: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: #dfdfdf;
+  }
 }
