--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ h1{
 
 nav{
   background-color: #fbeb7c;
-  height: 3rem;
+  /* height: 3rem; */
   display: flex;
   align-items: center;
   justify-content: space-between;
