--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,35 +1,32 @@
-
 .authForms {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-    height: calc(100vh - 4rem);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  height: calc(100vh - 4rem);
 }
 
 .authField {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .authForms label {
-    letter-spacing: 5px;
-    color: rgb(14, 14, 13);
-    font-weight: 500;
+  letter-spacing: 5px;
+  color: rgb(14, 14, 13);
+  font-weight: 500;
 }
 
 .authForms input {
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #dfdfdf;
-    border-radius: 16px;
-    width: calc(100% - 5rem);
-    margin: 1rem;
-    padding: 1rem;
+  background-color: rgba(240, 240, 240, 0.26);
+  border: 1px solid #dfdfdf;
+  border-radius: 16px;
+  width: calc(100% - 5rem);
+  margin: 1rem;
+  padding: 1rem;
 }
-
-
 
 .pageForms {
   display: flex;
@@ -39,21 +36,73 @@
 }
 
 .pageForms button {
-    border:wheat;
-    border: 1px solid #dfdfdf;
-	border-radius:25px;
-    color: rgb(223, 230, 236);
-    size: 0.5rem;
-	background:rgba(4, 3, 4, 0.9);
+  border: wheat;
+  border: 1px solid #dfdfdf;
+  border-radius: 25px;
+  color: rgb(223, 230, 236);
+  size: 0.5rem;
+  background: rgba(4, 3, 4, 0.9);
 }
 
 .pageForms input {
-    margin: 0.5rem 0;
-    /* align-items: center; */
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #dfdfdf;
-    border-radius: 16px;
-    box-sizing: border-box;
-    /* display: flex; */
-    /* justify-content: center; */
+  margin: 0.5rem 0;
+  background-color: rgba(240, 240, 240, 0.26);
+  border: 1px solid #dfdfdf;
+  border-radius: 16px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .menu-container.closed {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+    margin-right: -1rem;
+    background: rgba(0, 0, 0, 0.9);
+    height: 2rem;
+  }
+
+  .menu-container.opened .nav-menus {
+    position: absolute;
+    right: 0;
+    top: 3rem;
+    padding: 1rem;
+    /* gap: 0.5rem; */
+    display: flex;
+    flex-direction: column;
+    background: #dfdfdf;
+  }
+
+  .menu-container.opened .nav-menus a {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  .menu-container.opened .nav-menus a:hover {
+    color: #fff;
+    background: #333;
+  }
+
+  .menu-container.opened .nav-menus a:active {
+    color: #fff;
+    background: #000;
+  }
+
+  .menu-container.opened .nav-menus a:not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
+
+  .menu-container.opened .nav-menus a {
+    transition: all 0.3s ease-in-out;
+  }
+
+  .menu-container.opened .nav-menus a:focus {
+    outline: none;
+    color: #fff;
+    background: #000;
+  }
+
 }
