--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,8 @@ nav{
   align-items: center;
   justify-content: space-between;
   color: black;
-  font-weight: 200;
+  font-weight: 300;
+  padding-right: 0;
 }
 
 
