--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,14 @@ body *{
 }
 
 h1{
-  font-size: 1.5rem;
+  font-size: 4rem;
   padding-left: 0;
   margin-top: 0;
+  text-align: center;
 }
 
 nav{
-  background-color: #fbeb7c;
+  background-color: transparent;
   height: 3rem;
   display: flex;
   align-items: center;
@@ -32,6 +33,7 @@ nav{
   color: black;
   font-weight: 300;
   padding-right: 0;
+  
 }
 
 
@@ -44,7 +46,8 @@ nav{
   font-weight: 500;
   color: black;
   text-decoration: none;
-  font-size: 0.9rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .authField{
@@ -59,21 +62,22 @@ nav{
 .header h1 {
   font-family: Montserrat;
   font-weight: 300;
-  size: 6rem;
+  size: 5rem;
   color: #fff;
   text-shadow:
-    0 0 5px #fff,
-    0 0 8px #fff,
+    0 0 5px #b1b0b0,
+    0 0 8px #b1b0b0,
     0 0 12px #fff,
     0 0 1px #e2e60c,
     0 0 30px #e2e60c,
     0 0 1px #e2e60c,
     0 0 1px #e2e60c,
     0 0 100px #e2e60c;
+    font-weight: bold;
 }
 
 .header p{
-  font-size: 0.9rem;
+  font-size: 1.5rem;
   line-height: 1.5;
 }
 
