--- a/src/Styles.css
+++ b/src/Styles.css
@@ -135,7 +135,7 @@
   padding: 1rem;
   font-size: 1rem;
   font-weight: bold;
-  letter-spacing: 0.3rem;
+  /* letter-spacing: 0.3rem */;
 }
 
 .skill-dets button {
@@ -148,7 +148,7 @@
   padding: 1rem;
   font-size: 1rem;
   font-weight: bold;
-  letter-spacing: 0.5rem;
+  /* letter-spacing: 0.5rem */;
 }
 
 .skill-dets p {
