--- a/src/Main.css
+++ b/src/Main.css
@@ -4,7 +4,6 @@
     max-width: 100vw;
     margin: 0;
     padding: 0;
-    color: black;
   }
 
   body{
@@ -17,12 +16,76 @@
     font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: 300;
     text-decoration: none;
+    color: white
   }
 
   nav{
-    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 5rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  .navAllMenus{
+    display: none;
+  }
+
+  .hamburger-container{
+    position: relative;
+    padding: 0;
+  }
+
+  .hamburger{
+    padding: 0;
+  }
+
+  .hamburger img{
+    padding: 0;
+  }
+
+  .drops.small{
+    display: none;
+  }
+
+  .drops.large{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 0;
+    margin: 0;
+  }
+
+  .drops.large a{
+    padding: 0.5rem 1rem;
+  }
+
+  .drops{
+    display: block;
+    position: absolute;
+    background-color: rgba(175, 175, 175, 0.8);
+    top: 1.5rem;
+    right: 0;
+    
   }
 
   header{
-    background-color: red;
+    background-image: url('https://img.freepik.com/free-photo/dark-room-with-light-background_1409-1809.jpg?w=740&t=st=1685528253~exp=1685528853~hmac=503ef6cd14213dc51e792efc1ea894275922959bcab6ee3447815e965ccc1f73');
+  }
+
+
+  /*tablet*/
+  @media (min-width: 769px){
+    .hamburger{
+      display: none;
+    }
+
+    .drops {
+      display: block;
+    }
+
+    .navAllMenus{
+      display: block
+    }
   }
