--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
   padding-left: 0;
 }
 
@@ -11,7 +11,6 @@
   color: #000;
   font-size: 1rem;
   font-weight: bold;
-  /* letter-spacing: 0.3rem; */
 }
 
 .nav-menus button {
@@ -135,7 +134,6 @@
   padding: 1rem;
   font-size: 1rem;
   font-weight: bold;
-  /* letter-spacing: 0.3rem */;
 }
 
 .skill-dets button {
@@ -148,7 +146,6 @@
   padding: 1rem;
   font-size: 1rem;
   font-weight: bold;
-  /* letter-spacing: 0.5rem */;
 }
 
 .skill-dets p {
@@ -242,4 +239,4 @@
     background: #000;
   }
 
-}
+} */
