--- a/src/Main.css
+++ b/src/Main.css
@@ -11,6 +11,10 @@
     min-height: calc(100vh - 10rem);
   }
 
+  img{
+    max-width: 100vw;
+  }
+
   body{
     margin: 0;
     padding: 0;
@@ -28,7 +32,6 @@
     margin: 0;
     padding: 0;
   }
-
 
   nav{
     display: flex;
@@ -111,12 +114,19 @@
     align-items: flex-end;
     padding: 0;
     margin: 0;
-    
+    z-index: 1;
   }
 
   .drops.large a{
     padding: 0.5rem 1rem;
     color: white;
+  }
+
+  .drops.large button{
+    padding: 0.5rem 1rem;
+    color: white;
+    background-color: #1d1d1d;
+    border: none;
   }
 
   .drops{
@@ -165,7 +175,7 @@
     padding: 0;
   }
 
-  .openUserDiv h4{
+  .openUserDiv h3{
     padding: 0;
     margin: 0.5rem 0 ;
     font-size: 1.1rem;
@@ -238,15 +248,14 @@
   }
 
   .userInfo{
-    background-color: #1d1d1d;
-    height: 32rem;
+    height: 30rem;
     padding: 0;
   }
 
   .userInfo img{
     padding: 0;
     width: 100%;
-    max-height: 100%;
+    height: calc(100% - 3rem);
     position: relative;
     overflow: hidden;
     object-fit: cover;
@@ -259,26 +268,79 @@
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
     position: relative;
-    bottom: 7rem;
+    bottom: 4rem;
   }
 
   .userData h1{
     font-weight: 600;
     padding-top: 2.3rem;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
   .userData h3{
     padding: 0;
     font-size: 1rem;
+    font-weight: 500;
   }
 
   .profileSection{
+    margin: 1rem 0;
   }
 
-  .profileSection h2{
+  .profileSection h3{
+    padding: 0;
+    margin: 0.5rem 0 ;
+    font-size: 1.1rem;
     font-weight: 600;
-    padding: 1rem 0;
+  }
+
+  .grid{
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
+  }
+
+ /*  .venue{
+    grid-template-columns: repeat(2, 1fr);
+  } */
+
+
+  .container{
+    padding: 0;
+    width: 100%;
+    aspect-ratio: 1/1;
+    background-color: lightgrey;
+    overflow: hidden;
+  }
+
+  .container h2{
     font-size: 1rem;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .container a{
+    padding: 0;
+  }
+
+  .container img{
+    padding: 0;
+    object-fit: cover;
+    object-position: center;
+    height: 100%;
+  }
+
+  .empty-grid{
+    padding: 0;
+    background-color: rgb(241, 241, 241);
+    aspect-ratio: 3/1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .empty-grid p{
+    margin: 0;
   }
 
 
@@ -287,6 +349,10 @@
   /*tablet*/
   @media (min-width: 769px){
     .hamburger{
+      display: none;
+    }
+
+    .hamburger-container{
       display: none;
     }
 
