--- a/src/Main.css
+++ b/src/Main.css
@@ -427,6 +427,17 @@
     margin-top: 1rem;
   }
 
+  .popup{
+    background-color: red;
+    position: fixed;
+    top: 20%;
+    width: 80vw;
+  }
+
+  .popup.hidePop{
+    display: none;
+  }
+
   /*tablet*/
   @media (min-width: 769px){
     .hamburger{
