--- a/src/Main.css
+++ b/src/Main.css
@@ -274,6 +274,13 @@
     border-top-right-radius: 60px;
     position: relative;
     bottom: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .userData > :first-child{
+    padding-left: 0;
   }
 
   .userData h1{
@@ -285,6 +292,33 @@
     padding: 0;
     font-size: 1rem;
     font-weight: 500;
+  }
+
+  .updUserIcon{
+    padding: 0;
+    padding-top: 3rem;
+    
+  }
+
+  .updUserIcon > div{
+    padding: 0;
+  }
+
+  .updUserIcon button{
+    padding: 0;
+    background: none;
+    border: none;
+    padding-right: 1rem;
+  }
+
+  .updateIcon{
+    font-size: 1.7rem;
+    text-align: center;
+    padding: 0;
+  }
+
+  .popupField{
+    padding: 0;
   }
 
   .profileSection{
@@ -428,10 +462,25 @@
   }
 
   .popup{
-    background-color: red;
+    background-color: lightgray;
     position: fixed;
-    top: 20%;
-    width: 80vw;
+    top: 10%;
+    left: 5%;
+    right: 5%;
+    border-radius: 1rem;
+  }
+
+  .popup form{
+    padding-top: 2rem;
+  }
+
+  .popup .submitDiv{
+    padding-left: 0;
+  }
+
+  .popup button{
+    padding: 1rem;
+    border: solid 2px #1d1d1d;
   }
 
   .popup.hidePop{
