--- a/src/Main.css
+++ b/src/Main.css
@@ -40,6 +40,7 @@
     height: 3rem;
     margin: 0;
     padding: 0;
+    border-bottom: 2px solid #1d1d1d;
   }
 
   nav a{
@@ -53,6 +54,12 @@
 
   .navAllMenus{
     display: none;
+  }
+
+  .logout{
+    border: none;
+    background-color: white;
+    font-weight: 800;
   }
 
   header{
@@ -493,6 +500,14 @@
     display: none;
   }
 
+  .create h1{
+    margin-bottom: 1rem;
+  }
+
+  .anonButton{
+    margin-bottom: 2rem;
+  }
+
   /*tablet*/
   @media (min-width: 769px){
     .hamburger{
@@ -545,7 +560,7 @@
     .homeSection{
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: space-evenly;
     }
 
 
@@ -568,6 +583,20 @@
       padding: 0 1rem;
       border-right: solid 1px white;
       border-left: solid 1px white;
+    }
+
+    .userInfo{
+      height: 60vh;
+    }
+
+    .create{
+      margin: 3rem 1rem;
+    }
+
+    .sqcontainer{
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
@@ -609,7 +638,56 @@
       margin: 1rem 3rem;
     }
 
-    form{
+    .authForm > form{
       width: 50%;
+    }
+
+    .grid{
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 1rem;
+      margin-top: 1rem;
+      margin-bottom: 3rem;
+    }
+
+    .userInfo{
+      height: 40rem;
+      background-color: #1d1d1d;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-evenly;
+      overflow: hidden;
+    }
+
+    .userInfo img{
+      width: 30rem;
+      border-radius: 50%;
+    }
+
+    .userData{
+      background-color: #1d1d1d;
+    }
+
+    .userData h1{
+      color: white;
+      font-size: 3rem;
+    }
+
+    .userData h3{
+      color: white;
+    }
+
+    .updateIcon *{
+      color: white;
+    }
+
+    .profileSection{
+      margin-top: 4rem;
+      margin-bottom: 4rem;
+    }
+
+    .empty-grid{
+      aspect-ratio: 5/1;
     }
   }
